--- a/source/_posts/Index/前端面试基础.md
+++ b/source/_posts/Index/前端面试基础.md
@@ -10,6 +10,8 @@ categories:
 
 ---
 
+
+
 >  L247 - 快速搞定前端技术一面 匹配大厂面试要求
 
 #  一、HTML
@@ -24,7 +26,7 @@ categories:
 
 > [Chuckie's Blog-CSS](https://chuckiewill.github.io/categories/css/)
 
-###  布局
+###  2.1布局
 
 ####  盒子模型的宽度如何计算? 
 
@@ -251,6 +253,7 @@ categories:
         }
         //p行高 20px*200% ,所以行高为40px
         //此时是body先计算出 line-height: 40px, 然后p标签继承了line-height: 40px
+		//若此时body没有font-size:20px  则p的行高为16px*200%=32px
 ```
 
 
@@ -304,7 +307,7 @@ categories:
 
 
 
-#  javascript
+#  三、javascript
 
 ##  变量类型和计算
 
@@ -403,7 +406,7 @@ const a = 100 + false// 100
   * `0 == ''  ` true
   * `0 == false ` true
   * `false == ' '  `  true
-  * `null ==undefined  `    true
+  * `null == undefined  `    true
 
 
 
@@ -414,11 +417,13 @@ const a = 100 + false// 100
 const obj = { x: 100 }
 if (obj.a == null) { }
 //相当于:
-// if (obj.a == null || obj.a === undefined) {}
+// if (obj.a === null || obj.a === undefined) {}
 
 ```
 
 #### 手写深拷贝
+
+*函数可以深拷贝吗？？？？*
 
 ```js
 /**
@@ -426,6 +431,7 @@ if (obj.a == null) { }
  * @param {Object} obj 要拷贝的对象
  */
 function deepClone(obj = {}) {
+    //只要不是数组和对象都原值返回
     if (typeof obj !== 'object' || obj == null) {
         // obj 是 null ，或者不是对象和数组，直接返回 typeof null === 'object'
         return obj
@@ -441,6 +447,7 @@ function deepClone(obj = {}) {
 
     for (let key in obj) {
         // 保证 key 不是原型的属性
+        //hasOwnProperty返回true则不是原型的属性
         if (obj.hasOwnProperty(key)) {
             // 递归调用！！！
             result[key] = deepClone(obj[key])
@@ -531,6 +538,8 @@ function deepClone(obj = {}) {
 
 ###  闭包
 
+> **闭包就是能够读取其他函数内部变量的函数**
+>
 > 作用域应用的特殊情况，有两种表现:
 >
 > * 函数作为参数被传递
@@ -883,6 +892,7 @@ for ( i = 0; i < 10; i++) {
   }).then(() => {
       console.log(3)
   })
+
   
   // 第二题
   Promise.resolve().then(() => { // 返回 rejected 状态的 promise
@@ -903,6 +913,11 @@ for ( i = 0; i < 10; i++) {
   }).catch(() => {
       console.log(3)
   })
+
+
+//1 3
+//1 2 3 
+//1 2
 ```
 
   
@@ -923,7 +938,7 @@ for ( i = 0; i < 10; i++) {
 ```
 
 ```js
-  ( async function () {
+  !( async function () {
       console.log( 'start ' )
       const a = await 100
       console.log( 'a', a)
@@ -949,7 +964,7 @@ for ( i = 0; i < 10; i++) {
   setTimeout(() => {
       console.log ( 200)
   })
-  Promise.resolve( ) .then(() =→>{
+  Promise.resolve( ).then(() =→>{
       console.log( 300)
   })
   console.log (400)
@@ -1348,7 +1363,7 @@ for ( let i = 0; i < length; i++) {
 ```js
 // navigator
 const ua = navigator.userAgent
-const isChrome = ua.index0f ( ' Chrome')
+const isChrome = ua.index0f ( 'Chrome')
 console.log ( isChrome)
 
 
@@ -1446,6 +1461,7 @@ function bindEvent(elem, type, selector, fn) {
         const target = event.target
         if (selector) {
             // 代理绑定
+            //matches是dom元素对象的方法
             if (target.matches(selector)) {//判断元素是否为代理事件的元素
                 // fn.call(target,event)
                 fn(event)//执行回调函数
@@ -1920,7 +1936,7 @@ CORS
 ###  常用命令
 
 * git add .
-* git checkout xxx        恢复到修改前的状态（撤销修改，对git commit 后的修改做恢复）
+* git checkout xxx        恢复到修改前的状态（撤销修改）
   * git checkout 文件名    恢复这个文件的修改
   * git checkout .       恢复所有文件的修改
   * *已经git add 的文件则不能再撤销修改，只要是还没有加入缓存区的都可以修改*
@@ -1956,7 +1972,7 @@ CORS
   * 此时是对已经git add 和git commit 后的版本查看，
   * 若没有git commit 则无效，本质是对git commit 的版本进行查看
 
-* git fetch  拉下所有的分支
+* git fetch  访问远程仓库，从中拉取所有本地还没有的数据
 
 * git stash   将修改的部分移除并暂存在其他地方（误操作时使用）
 
@@ -1998,20 +2014,26 @@ CORS
 
 4. leader合并开发者1和2的代码
 
-   * 拉去所有代码所有分支到本地： `get fetch`
+   * leader在master分支上，拉取最新内容`git fetch `
 
-   * 切到每个分支，拉取最新代码：`get pull orgin 分支名`    //此操作是确保每个分支是最新内容
+   * 切到需要合并的分支上
 
-   * 合并分支（终端切在master分支上）: `git merge login` //将login分支内容合并到master分支上
-
-   * 将合并后的代码推到远程服务器： `git push`
-
-   * 按以上步骤合并下一个分支，直到产生冲突
-
+     * `git branch`不会显示开发者新建的分支名，可以在远程查看分支名
+  * 然后直接执行`git checkout 分支名`就直接切换到分支上了，而且本地分支和远程分支是一一对应的
+   
+* 切到分支后，拉取最新代码：`git pull orgin 分支名`    //此操作是确保每个分支是最新内容
+  
+* 合并分支（终端切在master分支上）: `git merge login` //将login分支内容合并到master分支上
+  
+* 将合并后的代码推到远程服务器： `git push`
+  
+* 按以上步骤合并下一个分支，直到产生冲突
+  
      ![image-20210705200537368](前端面试基础/image-20210705200537368.png)
-
+   
      * 找到冲突文件的位置，选择保留方式，并修改冲突位置
-
+     
+     
      ![image-20210705200700948](前端面试基础/image-20210705200700948.png) 
      * 因为处理冲突后修改了文件内容，所以需要`git add  git commit`
      * 提交到远程服务器： `git push`
@@ -2381,7 +2403,7 @@ const {sequelize : db} = require('../../core/db')
 
 * 删除文件夹：`rm -rf ...`
 
-  * `-r`:递归删除
+  * `-r`:   递归删除
 
   * `-f`：强制删除
 
@@ -2400,8 +2422,8 @@ const {sequelize : db} = require('../../core/db')
   * `touch 文件名`  //只新建
   * `vi 文件名 `     或`vim 文件名`   //新建并打开
     * 键盘点击`i`进入编辑模式，可以编辑文件
-    * 点即`ESC`按键，在输入`:`，在输入`w`（保存），再回车，再输入`q`,再回车即可保存文件并推出
-    * 点即`ESC`按键，在输入`:`，再输入`q`,强制推出，之前修改的内容并没有保存
+    * 点即`ESC`按键，再输入`:`，再输入`w`（写入），再回车，再输入`q`（保存）,再回车即可保存文件并推出
+    * 点即`ESC`按键，再输入`:`，再输入`q`,强制推出，之前修改的内容并没有保存
 
 * 查看文件内容
 
@@ -2651,9 +2673,7 @@ function debounce(fn, delay = 500){
       clearTimeout(timer)
     }
     timer = setTimeout(()=>{
-      //执行需要防抖的函数,防抖函数有参数也可执行
-      fn()
-      //fn.apply(this,arguments) 使用此方式时传入的函数不能时箭头函数，否则this就会有误
+      fn.apply(this,arguments) //使用此方式时传入的函数不能时箭头函数，否则this就会有误
       timer = null
     },delay)
   }
@@ -2670,6 +2690,8 @@ input.addEventListener('keyup', debounce(function(num = 200){
 * XSS跨站请求攻击
 
   > [npm-xss包](https://www.npmjs.com/pacage/xss)
+  >
+  > XSS又叫CSS (Cross Site Script) ，跨站脚本攻击。
 
   * 案例
     * 一个博客网站，我发表一篇博客，其中嵌入`<script>`脚本
@@ -2682,7 +2704,7 @@ input.addEventListener('keyup', debounce(function(num = 200){
     *  `<script>`变为`&lt;script&gt;`，直接显示，而不会作为脚本执行
     * 前端要替换，后端也要替换，都做总不会有错
 
-* XSRF 跨站请求伪造
+* XSRF 跨站请求伪造（*CSRF（Cross-site request forgery）跨站请求伪造*）
 
   * 案例
     * 你正在购物，看中了某个商品，商品id是100
@@ -2694,3 +2716,610 @@ input.addEventListener('keyup', debounce(function(num = 200){
   * 预防xsrf攻击
     * 使用post接口（post接口实现跨域很复杂，需要服务端验证，所以直接用img标签是攻击不了的）
     * 增加验证，例如密码、短信验证码、指纹等
+
+
+
+#  补充知识点
+
+##  正则表达式
+
+> [正则表达式教程](https://www.runoob.com/regexp/regexp-syntax.html)
+>
+> [正则表达式30分钟入门教程](https://deerchao.cn/tutorials/regex/regex.htm)
+
+```js
+
+// 邮政编码
+/\d{6}/
+
+// 小写英文字母
+/^[a-z]+$/
+
+// 英文字母
+/^[a-zA-Z]+$/
+
+// 日期格式 2019.12.1
+/^\d{4}-\d{1,2}-\d{1,2}$/
+
+// 用户名  6-18位字母，数字，下划线  
+/^[a-zA-Z]\w{5, 17}$/
+
+// 简单的 IP 地址匹配
+/\d+\.\d+\.\d+\.\d+/
+
+```
+
+
+
+
+
+
+
+#   面试真题
+
+* var和let const 的区别
+
+  * var 和let是变量，可修改;const是常量，不可修改;
+
+  * let const 有块级作用域，var没有
+  * var是 ES5语法，let const是ES6语法;var有变量提升
+
+```js
+// 变量提升 ES5
+console.log(a) // undefined
+var a = 200
+
+var a
+console.log(a) // undefined
+a = 200
+
+//上面两种写法一样，类似函数声明
+
+console.log(b)//报错，b没有声明，因为let没有变量提升
+let b = 100
+```
+
+* typeof 返回哪些类型
+  * undefined string number boolean symbol
+  * object （注意，typeof null === 'object’)
+  * function
+* 列举强制类型转换和隐式类型转换
+  * 强制: parseInt parseFloat toString 等
+  * 隐式:if、逻辑运算、==、＋拼接字符串
+
+* 手写深度比较，模拟lodash isEqual
+
+```js
+// 判断是否是对象或数组
+function isObject(obj) {
+    return typeof obj === 'object' && obj !== null
+}
+// 全相等（深度）
+function isEqual(obj1, obj2) {
+    if (!isObject(obj1) || !isObject(obj2)) {
+        // 值类型（注意，参与 equal 的一般不会是函数）
+        return obj1 === obj2
+    }
+    //可能传入的就是同一个对象，指向同一个引用地址
+    if (obj1 === obj2) {
+        return true
+    }
+    // 两个都是对象或数组，而且不相等
+    // 1. 先取出 obj1 和 obj2 的 keys ，比较个数
+    const obj1Keys = Object.keys(obj1)
+    const obj2Keys = Object.keys(obj2)
+    if (obj1Keys.length !== obj2Keys.length) {
+        return false
+    }
+    // 2. 以 obj1 为基准，和 obj2 依次递归比较
+    for (let key in obj1) {
+        // 比较当前 key 的 val —— 递归！！！
+        const res = isEqual(obj1[key], obj2[key])
+        if (!res) {
+            return false
+        }
+    }
+    // 3. 全相等
+    return true
+}
+```
+
+
+
+* split()和join()的区别
+
+```js
+'1-2-3'.split('-')//[1,2,3]
+[1,2,3].join( '-')// '1-2-3'
+```
+
+* 数组的pop push unshift shift分别做什么
+
+  * pop: 删除数组最后一个元素，返回值：删除的元素
+  * shift: 删除数组第一个元素，返回值：删除的元素
+  * push: 在数组最后添加元素，返回值：添加元素后的数组长度
+  * unshift: 在数组最前添加元素，返回值：添加元素后的数组长度
+
+* 数组API有哪些是纯函数
+
+  > 纯函数:1.不改变源数组(没有副作用); 2.返回一个数组
+
+```js
+const arr = [10, 20, 30, 40]
+// concat
+const arr1 = arr.concat([50, 60, 70])
+const arr2 = arr.concat(50) // [10, 20, 30, 40, 50]
+const arr3 = arr.concat('50') //[10, 20, 30, 40, "50"]
+// map 对每个元素执行操作
+const arr2 = arr.map(num => num * 10)
+// filter  将满足条件的元素以数组返回
+const arr3 = arr.filter(num => num > 25)
+// slice  拷贝 但是是浅拷贝，只拷贝了第一层，更深层只是拷贝引用， 
+// 新数组的引用和原数组的引用指向同一片内存地址
+const arr4 = arr.slice()
+```
+
+* 数组的常见非纯函数
+
+```js
+//非纯函数
+push pop shift unshift
+forEach
+some every
+reduce
+```
+
+* 数组slice和splice的区别
+
+```js
+const arr = [10, 20, 30, 40, 50]
+
+// slice 纯函数  只截取,不添加,不影响原数组
+const arr1 = arr.slice() //[10, 20, 30, 40, 50]
+// 截取index在[1, 4)之间的元素，包括index=1的元素，不包括index=4的元素
+const arr2 = arr.slice(1, 4)//[20, 30, 40]
+// 从index=2的位置开始截取后面所有的元素，包括index=2的元素
+const arr3 = arr.slice(2)//[30, 40, 50]
+// 截取后三个元素 
+const arr4 = arr.slice(-3)//[30, 40, 50] 
+
+// splice 非纯函数  可截取，也可添加，影响原数组
+//从index=3的位置开始截取2个元素，并从index=3的位置添加元素'a', 'b', 'c'
+const spliceRes = arr.splice(3, 2, 'a', 'b', 'c') 
+console.log(spliceRes, arr)//[40, 50],[10, 20, 30, "a", "b", "c"]
+//截取index在[2, 4]区间的元素
+const spliceRes1 = arr.splice(2, 3)
+console.log(spliceRes1, arr)//[30, 40, 50],[10, 20]
+//在index=1的位置添加元素'a', 100, 'c'
+const spliceRes2 = arr.splice(1, 0, 'a', 100, 'c')
+console.log(spliceRes2, arr) //[],[10, "a", 100, "c", 20, 30, 40, 50]
+```
+
+* [10,20,30].map(parseInt)返回结果是什么?
+
+  > [parseInt(string, radix)](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/parseInt)
+  >
+  > parseInt是将radix进制的字符串string转换为十进制整数
+  >
+  > 若不传参数radix则传入上面进制的数就返回什么进制的数，只是去掉小数点后的部分，只保留整数部分
+
+```js
+const res = [10, 20, 30].map(parseInt)
+console.log(res) //[10, NaN, NaN]
+
+// 拆解
+[10, 20, 30].map((num, index) => {
+    return parseInt(num, index)
+})
+
+//理解parseInt(string, n)
+//string是需要转换的字符串
+//n是以n进制解析并转换
+
+//parseInt('10', 0)等同于parseInt('10', 10)
+
+parseInt('10',10) //10
+parseInt('10',0)  //10
+parseInt('10',2)  //2
+parseInt('1010.01') //1010
+```
+
+
+
+* ajax请求get和post的区别?
+  * get一般用于查询操作，post 一般用户提交操作
+  * get参数拼接在url 上 , post放在请求体内（数据体积可更大)
+  * 安全性:post易于防止XSRF
+* 函数call和apply的区别
+  * 传参方式不一样
+* 事件代理（委托）是什么?
+* 闭包是什么，有什么特性?有什么负面影响?
+  * 闭包就是能够读取其他函数内部变量的函数
+  * 特性∶函数作为参数被传入，函数作为返回值被返回
+  * 特性:自由变量的查找，要在函数定义的地方（而非执行的地方）
+  * 影响:变量会常驻内存，得不到释放。闭包不要乱用
+* 如何阻止事件冒泡和默认行为?
+  * event.stopPropagation()
+  * event.preventDefault()
+* 查找、添加、删除、移动DOM节点的方法?
+* 如何减少DOM操作?
+  * 缓存DOM查询结果
+  * 多次DOM操作，合并到一次插入
+* 解释jsonp的原理，为何它不是真正的ajax ?
+  * jsonp是利用`<script>`请求到一段js代码(代码是可以已经包含了数据)并直接执行
+  * 因为jsonp没有使用xmlhttprequestAPI，没有服务端允许跨域的步骤
+* document load和ready的区别
+  * load: 图片、视频加载完成后
+  * ready: 渲染完成后，但图片、视频可能还未加载完   `DOMContentLoaded`
+* ==和===的不同
+  * == 会尝试类型转换
+  * === 严格相等  值和类型都一样
+* 函数声明和函数表达式的区别
+  * 函数声明`function fn() {...}`
+  * 函数表达式`const fn = function() {...}`
+  * 函数声明会在代码执行前预加载，而函数表达式不会
+
+```js
+// 函数声明  
+const res = sum(10, 20)
+console.log(res) //正常执行
+function sum(x, y) { //函数会提前预加载
+    return x + y
+}
+```
+
+```js
+// 函数表达式
+var res = sum(10, 20)//报错 sum是undefined 
+console.log(res) 
+var sum = function (x, y) {//sum会变量提升
+    return x + y
+}
+```
+
+
+
+* new Object()和Object.create()的区别
+  * {}等同于new Object() ，原型为Object.prototype
+  * Object.create(null)没有原型
+  * Object.create({...})可指定原型
+  * **`Object.create({...})`新建一个空对象，并让空对象的隐式原型等于传入的值**
+
+```js
+const obj1 = {
+    a: 10,
+    b: 20,
+    sum() {
+        return this.a + this.b
+    }
+}
+
+const obj2 = new Object({
+    a: 10,
+    b: 20,
+    sum() {
+        return this.a + this.b
+    }
+})
+
+console.log(obj1 === obj2)//false 引用指向不同的地址
+
+const obj21 = new Object(obj1) // obj21 === obj2 引用指向同一个地址
+
+const obj3 = Object.create(null) //{} 没有原型 因为原型为null
+const obj4 = new Object() // {}  原型为Object.prototype
+
+const obj5 = Object.create({
+    a: 10,
+    b: 20,
+    sum() {
+        return this.a + this.b
+    }
+})
+
+const obj6 = Object.create(obj1)
+//obj6.__proto__ === obj1
+//obj6.__proto__ === obj21
+```
+
+
+
+* 关于this的场景题
+  * this在执行的时候确定，不是在定义的时候确定
+
+```js
+const User = {
+    count: 1,
+    getCount: function() {
+        return this.count
+    }
+}
+console.log (User.getCount())/ / 1
+const func = User.getCount
+console.log( func() )// undefined
+```
+
+* 关于作用域和自由变量的场景题
+
+```js
+let i
+for(i = 1; i <= 3;i++){
+  setTimeout(function(){
+    console.log(i)
+  },0)
+}
+
+//打印结果
+// 4 4 4 
+```
+
+```js
+let a = 100
+function test(){
+  alert(a) //100   该作用域没有定义则向上一级作用域查找
+  a = 10
+  alert(a)//10
+}
+test()
+alert(a)//10
+```
+
+
+
+* 判断字符串以字母开头，后面字母数字下划线，长度6-30
+
+```js
+const reg = /^[a-zA-Z]\w{5,29}$/
+```
+
+* 手写字符串trim保证浏览器兼容性
+
+  > trim():去除字符串两边的空白
+  >
+  > replace():在字符串中查找匹配的子串，并替换与正则表达式匹配的子串。返回值：修改后的字符串
+
+```js
+先判断是否有String.prototype.trim。若没有则做下面操作以达到兼容的效果
+String.prototype.trim= function (){
+    //this指向需要使用trim函数的字符串
+    //replace(/^\s+/,'')去掉开头的空格
+    //replace(/\s+$/,'')去掉结尾的空格
+	return this.replace(/^\s+/,'').replace(/\s+$/,'')
+}
+//(原型、this、正则表达式)
+```
+
+* 获取多个数字中的最大值
+
+  > 使用Math.max() 或下面的函数
+
+```js
+function max() {
+  const nums = Array.prototype.slice.call(arguments)//变为数组
+  let max = nums[0]
+  nums.forEach(n => {
+      if (n > max){
+          max = n
+      }
+  })
+  return max
+}
+
+console.log(max(-10,-29,-39,-1,-29,-200,0))//0
+```
+
+* 如何捕获JS程序中的异常?
+
+```js
+//高风险位置
+try {
+// todo
+} catch (ex) {
+console.error(ex) // 手动捕获catch
+} finally {
+// todo
+}
+```
+
+```js
+//自动捕获
+window.onerror = function (message, source, lineNum, colNum, error) {
+//第一，对跨域的jS,如CDN的，不会有详细的报错信息
+//第二，对于压缩的js，还要配合sourceMap 反查到未压缩代码的行、列
+}
+
+```
+
+
+
+* 什么是JSON ?
+  * json是一种数据格式 ,本质是一段字符串。
+  * json格式和JS对象结构一致,对JS语言更友好
+  * window.JSON是一个全局对象: JSON.stringify  JSON.parse
+  * JSON中key和字符串都要用双引号
+* 获取当前页面url参数
+
+```js
+//url:http://code/questions-demo/index.html?a=10&b=20&c=30
+// 传统方式
+function query(name) {
+    //去掉？ location.search: '?a=10&b=20&c=30'
+    const search = location.search.substr(1) // 类似 array.slice(1)
+    // search: 'a=10&b=20&c=30'
+    const reg = new RegExp(`(^|&)${name}=([^&]*)(&|$)`, 'i')//'i':不分大小写
+    const res = search.match(reg)
+    console.log(res)
+    //res[0]  "&b=20&"  匹配的整体
+    //res[1]  "&"       匹配的第一个()
+    //res[2]  "20"      匹配的第二个()
+    //res[3]  "&"       匹配的第三个()
+    if (res === null) {
+        return null
+    }
+    return res[2]  //20
+}
+query('b')
+
+//URLSearchParams
+function query(name) {
+    const search = location.search
+    const p = new URLSearchParams(search)
+    return p.get(name)
+}
+console.log( query('b') )//20
+```
+
+* 将url参数解析为JS对象
+
+```js
+//传统方式，分析search
+function queryTo0bj() { 
+    const res = {}
+    const search = location. search.substr(1) //去掉前面的'?'
+    // search: 'a=10&b=20&c=30'
+    search.split('&').forEach(paramStr => {
+        const arr = paramStr.split('=')
+        const key = arr[0]
+        const val = arr[1]
+        res[key] = val
+    })
+    return res
+}
+
+
+//使用URLSearchParams
+function queryTo0bj() {
+    const res = {}
+    const pList = new URLSearchParams(location.search)
+    pList.forEach((val, key) => {
+    	res[key] = val
+    })
+    return res
+}
+
+```
+
+
+
+* 手写数组flat, 考虑多层级
+
+  > 将多维数组变成一维数组
+  >
+  > some():  检测数组元素中是否有元素符合指定条件
+  >
+  > * 如果有一个元素满足条件，则表达式返回*true* , 剩余的元素不会再执行检测。
+  > * 如果没有满足条件的元素，则返回false。
+
+```js
+function flat(arr) {
+    // 验证 arr 中，还有没有深层数组 [1, 2, [3, 4]]
+    const isDeep = arr.some(item => item instanceof Array)
+    if (!isDeep) {
+        return arr // 已经是 flatern [1, 2, 3, 4]
+    }
+	////等同于[].concat(1, 2, [3, 4]) [].concat(...arr)
+    const res = Array.prototype.concat.apply([], arr)
+    return flat(res) // 递归
+}
+
+const res = flat( [1, 2, [3, 4, [10, 20, [100, 200]]], 5] )
+console.log(res)
+```
+
+
+
+* 数组去重
+  * 推荐使用set的方式，因为传统方式forEach和indexOf都是遍历，就形成了嵌套遍历，时间复杂度更大
+
+```js
+// 传统方式
+function unique(arr) {
+    const res = []
+    arr.forEach(item => {
+        if (res.indexOf(item) < 0) {
+            res.push(item)
+        }
+    })
+    return res
+}
+
+// 使用 Set （无序，不能重复）
+function unique(arr) {
+    const set = new Set(arr)
+    return [...set]
+}
+```
+
+* 手写深拷贝
+  * 注意, Object.assign不是深拷贝! 它只拷贝了第一层，更深层的只拷贝了引用
+* 介绍一下RAFrequestAnimationFrame
+  * 要想动画流畅,更新频率要60帧/s , 即16.67ms更新一次视图
+  * setTimeout要手动控制频率,而RAF浏览器会自动控制
+  * 后台标签或隐藏iframe中, RAF会暂停,而setTimeout依然执行
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>JS 真题演示</title>
+
+        <style>
+            #div1 {
+                width: 100px;
+                height: 50px;
+                background-color: red;
+            }
+        </style>
+    </head>
+    <body>
+        <p>JS 真题演示</p>
+
+        <div id="div1"></div>
+		//引用jQuery
+        <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.js"></script>
+        <script src="./RAF.js"></script>
+    </body>
+</html>
+```
+
+
+
+```js
+///RAF.js
+// 3s 把宽度从 100px 变为 640px ，即增加 540px
+// 60帧/s ，3s 180 帧 ，每次变化 3px
+
+const $div1 = $('#div1')
+let curWidth = 100
+const maxWidth = 640
+
+// setTimeout
+function animate() {
+    curWidth = curWidth + 3
+    $div1.css('width', curWidth)
+    if (curWidth < maxWidth) {
+        setTimeout(animate, 16.7) // 自己控制时间
+    }
+}
+animate()
+
+// RAF
+function animate() {
+    curWidth = curWidth + 3
+    $div1.css('width', curWidth)
+    if (curWidth < maxWidth) {
+        window.requestAnimationFrame(animate) // 时间不用自己控制
+    }
+}
+animate()
+
+```
+
+
+
+* 前端性能如何优化?- -般从哪几个方面考虑?
+  * 原则:多使用内存、缓存,减少计算、减少网路请求
+  * 方向:加载页面,页面渲染,页面操作流畅度
