--- a/source/_posts/Index/前端框架面试.md
+++ b/source/_posts/Index/前端框架面试.md
@@ -1251,12 +1251,11 @@ location.hash // '#/aaa/bbb'
   * 修改data，触发setter ( 此前在getter中已被监听)
   * 重新执行render函数,生成newVnode
   * patch(vnode, newVnode)
-
- ![image-20210809104851066](前端框架面试/image-20210809104851066.png)
- * 异步渲染
-     * 回顾$nextTick
-     * 汇总data的修改，一次性更新视图
-     * 减少DOM操作次数,提高性能
+![image-20210809104851066](前端框架面试/image-20210809104851066.png)
+* 异步渲染
+  * 回顾$nextTick
+  * 汇总data的修改，一次性更新视图
+  * 减少DOM操作次数,提高性能
 
 6 双向数据绑定v-model的实现原理
 
@@ -1611,7 +1610,7 @@ export default {
 * 用toRefs(state)的目的时：在模板中使用state中的属性时不用再通过state.属性的方式获取，直接通过属性名就可以获取
 * toRefs如果用于普通对象（非响应式对象），产出的结果不具备响应式
 
-```js
+```vue
 <template>
     <!-- 用toRefs后，就不用通过state.age, state.name这个繁琐的方式再获取了 -->
     <p>toRefs demo {{age}} {{name}}</p>
@@ -1862,7 +1861,7 @@ app.component('modal-button', {
 ####  Suspense
 
 > [v3迁移指南-Suspense](https://v3.cn.vuejs.org/guide/migration/suspense.html#suspense)
->
+> 
 > 使用场景：配合异步组件使用，当异步组件没有加载完成时则显示loading状态
 
 ```vue
@@ -1893,11 +1892,9 @@ export default {
 * reactive  实现响应式
 * watch和watchEffect
 * ref相关    
-* setup       等于vue2中的beforeCreate和created
+* setup  等于vue2中的beforeCreate和created
 * readonly   只读
 * 生命周期钩子函数
-
-
 
 ##  Composition API逻辑复用
 
@@ -2369,7 +2366,7 @@ export default {
 
 
 
-#  React
+#  三、React
 
 * React 组件如何通讯
 * JSX本质是什么
@@ -2380,7 +2377,7 @@ export default {
 
 
 
-#  webpack
+#  四、webpack
 
 * 前端代码为何要进行构建和打包?
 * module chunk bundle分别什么意思，有何区别?
@@ -2391,6 +2388,6 @@ export default {
 
 
 
-#  框架综合应用
+#  五、框架综合应用
 * 基于React设计一个todolISt (组件结构，redux state 数据结构）
 * 基于Vue设计一个购物车（组件结构，vuex state 数据结构)
