--- a/source/_posts/Index/前端框架面试.md
+++ b/source/_posts/Index/前端框架面试.md
@@ -9,11 +9,45 @@ categories:
 - [Index]
 ---
 
+
+
 * Vue和 React越来越接近
   * Vue3 Options API 对应 React class Component
   * Vue3 Composition API对应React Hooks
 
-
+>前端组件库
+>
+>* React UI 组件库
+>  Ant Design ：https://ant.design/
+>   React Bootstrap： https://react-bootstrap.github.io/ 
+>   MATERIAL-UI ：  https://material-ui.com/
+>
+>* Vue UI组件库
+>
+>  Element : https://element.eleme.io/#/zh-CN
+>  vant : https://youzan.github.io/vant/#/zh-C%E2%80%A6
+>  View UI :  https://www.iviewui.com/
+>
+>* 动画库
+>   Animate.css ：  https://animate.style/
+>* 常用效果组件
+>  swiper ： https://www.swiper.com.cn/
+>   mescroll.js   http://www.mescroll.com/api.html
+>
+>* 工具类轮子
+>  lodash.js ：  https://www.lodashjs.com/
+>   Day.js  ： https://dayjs.fenxianglu.cn/ 
+>   timeago.js ：  https://github.com/hustcc/timeago.js
+>   echarts  ：  https://echarts.apache.org/zh/index.html
+>   Meditor.md  :  https://pandao.github.io/editor.md/
+>   validator.js :   https://github.com/validatorjs/validator.js
+>
+>* Vue工具类
+>  vue-draggable ：  https://www.itxst.com/vue-draggable/tutorial.html
+>   vue-qr :   https://www.npmjs.com/package/vue-qr
+>   vue-cropper :   https://github.com/xyxiao001/vue-cropper
+>   vue-lazyload :   https://www.npmjs.com/package/vue-lazyload
+>   vue-simple-upload :   https://github.com/saivarunk/vue-simple-upload
 
 #  一、Vue
 
@@ -1251,7 +1285,7 @@ location.hash // '#/aaa/bbb'
   * 修改data，触发setter ( 此前在getter中已被监听)
   * 重新执行render函数,生成newVnode
   * patch(vnode, newVnode)
-![image-20210809104851066](前端框架面试/image-20210809104851066.png)
+  ![image-20210809104851066](前端框架面试/image-20210809104851066.png)
 * 异步渲染
   * 回顾$nextTick
   * 汇总data的修改，一次性更新视图
