--- a/source/_posts/Index/前端框架面试.md
+++ b/source/_posts/Index/前端框架面试.md
@@ -1641,7 +1641,7 @@ export default {
 * 将响应式对象( reactive封装）转换为普通对象(但对象中的值还具有响应式)
 * 对象的每个属性，都是 ref 对象
 * 两者（响应式对象和转换成的普通对象）保持引用关系, 即修改是联动了（修改响应式对象属性（state），普通对象属性也会修改）
-* 用toRefs(state)的目的时：在模板中使用state中的属性时不用再通过state.属性的方式获取，直接通过属性名就可以获取
+* 用toRefs(state)的目的是：在模板中使用state中的属性时不用再通过state.属性的方式获取，直接通过属性名就可以获取
 * toRefs如果用于普通对象（非响应式对象），产出的结果不具备响应式
 
 ```vue
@@ -1684,7 +1684,7 @@ export default {
 * reactive做对象的响应式，用ref做值类型响应式
 * setup中返回toRefs(state)，或者toRef(state,‘'xxx’)
 * ref的变量命名都用xxxRef
-* 合成函数返回响应式对象时，使用toRefs，便于使用方结构
+* 合成函数返回响应式对象时，使用toRefs，便于使用方解构
 
 ![image-20210809160820646](前端框架面试/image-20210809160820646.png)
 
@@ -2196,7 +2196,7 @@ const proxyData = observer(data)
 * 两者都可监听data属性变化
 * watch
   * 需要开发者明确指定监听哪个属性
-  * 深度监听时**拿不到旧值**，因为深度监听的对象时引用类型，oldValue和newValue指向同一个地址
+  * 深度监听时**拿不到旧值**，因为深度监听的对象是引用类型，oldValue和newValue指向同一个地址
 * watchEffect 
   * 会根据其中的属性，自动监听其变化，即代码块中某个属性变化了就会触发
   * 初始化时，一定会执行一次（收集要监听的数据），类似watch的immediate:为true
@@ -2229,6 +2229,7 @@ export default {
         })
         watchEffect(() => {
             console.log('state.name', state.name)//name变化时触发
+            // 也可以在这里调用一个函数，函数内部有响应式数据变化也会触发watchEffrctd
         })
         watchEffect(() => {
             console.log('state.age', state.age)//age变化时触发
