--- a/source/_posts/Index/前端框架面试.md
+++ b/source/_posts/Index/前端框架面试.md
@@ -9,7 +9,7 @@ categories:
 - [Index]
 ---
 
-
+> L231
 
 * Vue和 React越来越接近
   * Vue3 Options API 对应 React class Component
@@ -561,29 +561,75 @@ app.mixin({
 >
 >  [vue.js关于Object.defineProperty的利用原理](https://www.jianshu.com/p/07ba2b0c8fca/)
 >
->  [深入浅出Object.defineProperty()](https://www.jianshu.com/p/8fe1382ba135)
+>  [Object.defineProperty方法（详解）](https://blog.csdn.net/weixin_46726346/article/details/115913752)
 
 * 实现响应式的核心API —— **Object.defineProperty**
 
 ```js
 //Object.defineProperty基本使用
+// 案例1 属性本身没有
 const data = {}
 let name1 ='zhangsan'
-Object.defineProperty(data,'name', { 
+Object.defineProperty(data,'name', {  //name表示在对象data上添加属性，属性名为name
   get: function () { 
-    console.log( 'get')
-    return name1
+    console.log( 'get') 
+    return name1 // 不是data.name  而是外部在通过data.name访问时，返回name1的值
   },
   set: function (newVal) {
     console.log('set')
-    name1 = newVal
+    name1 = newVal  // data.name 实际存储的位置
   }
 });
 
 //测试
 console.log(data.name) //打印 get  zhangsan
 data.name = 'lisi'  //打印 set
+console.log(data.name) //打印 get  lisi
 
+
+// 案例2 属性本身存在
+const data = {
+  name: 'zhangsan'
+}
+function observer(data,key,value){
+  Object.defineProperty(data,'name', { 
+    get: function () { 
+      console.log( 'get')
+      return value    // 指定data.name 获取的值
+    },
+    set: function (newVal) {
+      console.log('set')
+      value = newVal // newVal赋值给value后，value再赋值给data.name  从而实现对data.name的修改  避免形成zi'di
+    }
+  })
+}
+
+observer(data,'name',data.name)
+//测试
+console.log(data.name) //打印 get  zhangsan
+data.name = 'lisi'  //打印 set
+console.log(data.name) //打印 get  lisi
+
+
+// 错误案例
+const data = {
+  name: 'zhangsan'
+}
+Object.defineProperty(data,'name', { 
+  get: function () { 
+    console.log( 'get')
+    return data.name
+  },
+  set: function (newVal) {
+    console.log('set')
+    data.name = newVal
+  }
+})
+
+//测试
+console.log(data.name) //一直打印get  因为get函数中又执行了data.name, 无限循环的执行data.name, 无限循环的打印get
+data.name = 'lisi'  //执行不到这里
+console.log(data.name) //执行不到这里
 ```
 
 
@@ -679,7 +725,7 @@ observer(data)
 // 测试
 // data.name = 'lisi'
 // data.age = 21
-// data.age = {num: 22}
+// data.age = {num: 22}   // 设置新值需要深度监听的案例
 // console.log('age', data.age.num)
 // data.x = '100' // 新增属性，监听不到 —— 所以有 Vue.set
 // delete data.name // 删除属性，监听不到 —— 所以有 Vue.delete
@@ -696,7 +742,7 @@ console.log(data.nums) // 打印结果[1,2,1000,4]
 
 * Object.defineProperty的一些缺点( Vue3.0启用Proxy )
   * 深度监听，需要递归到底，一次性计算量大
-  * 无法监听新增属性/删除属性(Vue.set Vue.delete )
+  * 无法监听新增属性/删除属性(用Vue.set和 Vue.delete专门来处理新增和删除属性的响应式 )
   * 无法原生监听数组，需要特殊处理，
     * 即原生数组的方法（push、pop、shift等等）对数组的修改无法通过Object.defineProperty监听到，所以需要对这些原生方法做特殊处理，
     * 通过索引对数组的修改可以通过Object.defineProperty监听到																																																																																													
@@ -2057,7 +2103,7 @@ const proxyData = new Proxy(data, {
 // get length  再次触发get 获取length属性
 // set 3 100    触发set 完成添加新属性
 // set length 4  再次触发set 完成length的更新
-// 2 去重的情况（在get中判断是获取本身属性才触发打印，在get中判断是不是重复设置才打印）
+// 2 去重的情况（在get中判断是获取本身属性才触发打印，在set中判断是不是重复设置才打印）
 // 打印结果
 // get length  length是本身的属性，所以会触发打印
 // set 3 100
