--- a/source/_posts/Index/前端面试基础.md
+++ b/source/_posts/Index/前端面试基础.md
@@ -2075,6 +2075,8 @@ PATCH /teams/ID:更新某个球队的信息（更新球队的部分信息)
 ####  强制缓存
 
 > Expires已经被Cache-Control代替
+>
+> [强制缓存解释](https://blog.csdn.net/m0_63657524/article/details/125966386)
 
 * Cache-Control
 
