--- a/source/_posts/Index/前端面试基础.md
+++ b/source/_posts/Index/前端面试基础.md
@@ -311,6 +311,8 @@ categories:
 
 ##  变量类型和计算
 
+> [symbol](https://blog.csdn.net/darabiuz/article/details/121962153?utm_medium=distribute.pc_relevant.none-task-blog-2~default~baidujs_baidulandingword~default-0-121962153-blog-122847268.235^v27^pc_relevant_3mothn_strategy_and_data_recovery&spm=1001.2101.3001.4242.1&utm_relevant_index=3)
+
 ####  typeof 能判断哪些类型
 
 * 识别所有值类型
@@ -2077,6 +2079,10 @@ PATCH /teams/ID:更新某个球队的信息（更新球队的部分信息)
 > Expires已经被Cache-Control代替
 >
 > [强制缓存解释](https://blog.csdn.net/m0_63657524/article/details/125966386)
+>
+> 强制缓存就是设定可以缓存的时间（max-age），只要不超过这个时间，每次请求都会从缓存中读取，不会发送请求
+>
+> 使用场景：例如百度的图标，短期不会变化，大概率不会存在缓存时间内数据会被修改的可能，即使修改问题也不大，则可以用强制缓存的方式
 
 * Cache-Control
 
@@ -2124,8 +2130,8 @@ PATCH /teams/ID:更新某个球队的信息（更新球队的部分信息)
 
 * Last-Modified和Etag
   * 会优先使用Etag
-  * Last-Modified只能精确到秒级
-  * 如果资源被重复生成,而内容不变,则Etag更精确，因为Etag是根据内容生成的字符串
+  * Last-Modified只能精确到秒级，存在一秒内多次修改的情况，这种情况Last-Modified就不能记录了
+  * 如果资源被重复生成,而内容不变（内容是周期性更新的，但更新可能并没有真的需要修改的内容）,则Etag更精确，因为Etag是根据内容生成的字符串
   * Last-Modified和Etag可以同时使用
 
 ![image-20210704185111501](前端面试基础/image-20210704185111501.png)
@@ -2937,6 +2943,8 @@ input.addEventListener('keyup', debounce(function(num = 200){
 
 ##  安全
 
+> 浏览器安全：https://www.yuque.com/i_geek/rules/ha9uir
+
 * XSS跨站请求攻击
 
   > [npm-xss包](https://www.npmjs.com/pacage/xss)
@@ -2947,12 +2955,14 @@ input.addEventListener('keyup', debounce(function(num = 200){
     * 一个博客网站，我发表一篇博客，其中嵌入`<script>`脚本
     * 脚本内容:获取cookie ，发送到我的服务器（服务器配合跨域)
     * 发布这篇博客，有人查看它，我轻松收割访问者的cookie
-
   * 预防xss攻击
-
-    * 替换特殊字符，如`<`变为`&lt;`,`>`变为`&gt;`
-    *  `<script>`变为`&lt;script&gt;`，直接显示，而不会作为脚本执行
-    * 前端要替换，后端也要替换，都做总不会有错
+    * 1 对输入的数据进行过滤或转码
+      * 替换特殊字符，如`<`变为`&lt;`,`>`变为`&gt;`
+      * `<script>`变为`&lt;script&gt;`，直接显示，而不会作为脚本执行
+      * 前端要替换，后端也要替换，都做总不会有错
+    * 2 csp (利用同源策略)
+    * 3 使用HttpOnly属性
+      * 服务端设置cookie的HttpOnly属性为true, 表示在浏览器不能访问cookie
 
 * XSRF 跨站请求伪造（*CSRF（Cross-site request forgery）跨站请求伪造*）
 
@@ -3573,3 +3583,71 @@ animate()
 * 前端性能如何优化?- -般从哪几个方面考虑?
   * 原则:多使用内存、缓存,减少计算、减少网路请求
   * 方向:加载页面,页面渲染,页面操作流畅度
+
+
+
+
+
+#  浏览器渲染原理
+
+> will-change: https://blog.csdn.net/Mancuojie/article/details/120632389
+>
+> 浏览器渲染：https://www.yuque.com/i_geek/rules
+
+浏览器渲染流程
+
+```
+1、使用htm1解析器将htm1页面转换成浏览器能够理解的DOM树ParseHTML
+2、将css解析成浏览器能够识别的CSS树
+3、样式计算
+4、DOM树+css树-->布局树
+5、根据布局树生成了图层树
+6、绘制(一个个的绘制)
+7、组合图层―生成最终的页面
+```
+
+那几情况能被叫做图层
+```
+1、css 3d
+2、position :fixed
+3、video
+4、canvas
+5、css3动画
+```
+
+浏览器一次可以接受多少数据
+
+* 64kb, 很大的视频也是分段接收
+
+**HTTP**
+
+* http/1.0:  解决多种类型文件下载―通过请求头和响应头进行协商、增加cache ,状态码,用户代理
+
+* http/1.1：对文件传输的速度，持久化连接，用户提升连接效率。
+
+* http/2.0：
+
+  * 为什么HTTP/1.1很难将带宓占满
+
+    * 1 tcp的慢启动  （http1.1允许一个域名开6个tcp）
+
+    * 2 同时开启多条TCP连接，那么这些连接会竞争国定的带宽
+
+    * 3 http/1.1的队头阻塞问题
+
+  * 基于以上问题就提出了HTTP/2.0
+
+    * 多路复用技术：一个域名只使用一个TCP长连接来传输数据
+
+      * 1 解决了tcp慢启动的问题，因为只有1个tcp了
+
+      * 2 解决了tcp竞争的问题
+
+    * 3 增加了优先级，解决了队头阻塞的问题，优先响应高优先级的数据
+
+    * 4 增加服务推送，请求html的时候，服务端知道html中引用了css，js，则提前将这些css,js推送给客户端
+
+    * 5 增加了头部压缩
+
+**浏览器安全**
+
