--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -315,7 +315,16 @@ categories:
 * 1041 [困于环中的机器人](https://leetcode.cn/problems/robot-bounded-in-circle/)
   * 模拟，考虑各种情况，总结每种情况的返回值，复习
   * ++取模，--取模（--取模之前需要先加模长）
+* 2409 [统计共同度过的日子数](https://leetcode.cn/problems/count-days-spent-together/)
+* 1157 [子数组中占绝大多数的元素](https://leetcode.cn/problems/online-majority-element-in-subarray/)
+  * 不会，看解析
+* 1026 [节点与其祖先之间的最大差值](https://leetcode.cn/problems/maximum-difference-between-node-and-ancestor/)
+  * 递归
+  * 优化：只有记录前面的最大值和最小值，看解析证明
 
+* 1043 [分隔数组以得到最大和](https://leetcode.cn/problems/partition-array-for-maximum-sum/)
+  * 动态规划
+  * 问题的抽象不会，复习，，，
 
 
 #  题型
@@ -357,6 +366,34 @@ categories:
 
 ##  树
 
+> 通过空节点判断递归到底，判断更简洁
+
+```c++
+        if(!root1 && !root2){
+            return nullptr;
+        }else if(!root1){
+            return root2;
+        }else if(!root2){
+            return root1;
+        }else{
+            root1->val = root1->val + root2->val;
+            root1->left = mergeTrees(root1->left, root2->left);
+            root1->right = mergeTrees(root1->right, root2->right);
+            return root1;
+        }
+
+// 上面可简写为下面
+ 		if(!root1) return root2;
+        if(!root2) return root1;
+		// 上面两行包括了都为空的情况
+        root1->val = root1->val + root2->val;
+        root1->left = mergeTrees(root1->left, root2->left);
+        root1->right = mergeTrees(root1->right, root2->right);
+        return root1;
+```
+
+
+
 * 94 [二叉树的中序遍历](https://leetcode.cn/problems/binary-tree-inorder-traversal/)
   * 非递归，复习
 * 96 [不同的二叉搜索树](https://leetcode.cn/problems/unique-binary-search-trees/)
@@ -367,17 +404,84 @@ categories:
   * 递归，向下传递范围，复习
 * 101 [对称二叉树](https://leetcode.cn/problems/symmetric-tree/)
   * 递归，控制传入的对称关系，复习
-
 * 102 [二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/)
   * 利用q.size()
-
 * 104 [二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
-
 * 105 [从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
 * 114 [二叉树展开为链表](https://leetcode.cn/problems/flatten-binary-tree-to-linked-list/)
   * 递归思想
 * 124 [二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
   * 递归思想
+* 226 [翻转二叉树](https://leetcode.cn/problems/invert-binary-tree/)
+  * 递归思想
+* 236 [二叉树的最近公共祖先](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/)
+  * 递归思想
+* 297 [二叉树的序列化与反序列化](https://leetcode.cn/problems/serialize-and-deserialize-binary-tree/)
+  * 递归思想
+  * 序列化，通过叶子节点的左右子树为空来判断递归到底
+  * 字符串转数字：stoi、atoi   负数也可以转换
+  * 数字转字符串：to_string
+  * 注意可以传引用的尽量传引用，字符串传值和传引用性能差距10倍
+* 337 [打家劫舍 III](https://leetcode.cn/problems/house-robber-iii/)
+  * 递归思想
+  * 通过空节点判断递归到底，更简洁
+* 437 [路径总和 III](https://leetcode.cn/problems/path-sum-iii/)
+  * 递归思想
+  * 前缀和
+  * unordered_map中不使用的元素实时移除，性能更高
+* 538 [把二叉搜索树转换为累加树](https://leetcode.cn/problems/convert-bst-to-greater-tree/)
+  * 递归思想
+  * 利用全局变量
+* 543 [二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/)
+  * 递归思想
+* 617 [合并二叉树](https://leetcode.cn/problems/merge-two-binary-trees/)
+  * 递归思想
+  * 判断优化
+
+##  单调栈
+
+> 栈存储索引，通过索引取值，就不用存键值对，空间开销更小
+>
+> 在一维数组中对每一个数找到第一个比自己小的元素。这类“在一维数组中找第一个满足某种条件的数”的场景就是典型的单调栈应用场景
+
+*  581 [最短无序连续子数组](https://leetcode.cn/problems/shortest-unsorted-continuous-subarray/)
+   *  单调栈
+   *  双指针，模拟单调栈
+
+*  739 [每日温度](https://leetcode.cn/problems/daily-temperatures/)
+   *  栈存储index值，通过 t[st[i]]拿到值
+
+*  42 [接雨水](https://leetcode.cn/problems/trapping-rain-water/)
+   *  双指针的策略没有理解透彻，复习
+
+*  84 [ 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
+   * 找到左边第一个比当前元素小的，找到右边第一个比当前元素小的
+*  85 [最大矩形](https://leetcode.cn/problems/maximal-rectangle/)
+   * 需要依赖84才能做出来，没有84的基础基本做不了
+
+##  回溯
+
+> 1 先排序有利于解决问题
+>
+> 2 对于重复的元素，采用**标记**的方式，相同的元素只有在前面的元素使用后后面的元素才能使用，保证排列组合不会重复
+>
+> 3 尽可能在原数组上标记，不用额外开空间，节省了空间，性能也更好
+
+* 17 [电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
+
+* 22 [ 括号生成](https://leetcode.cn/problems/generate-parentheses/)
+  * 不熟练，复习，，，，
+  * 每次有两个选择，要么加入'('、要么加入')', 所以需要回溯保证，每层只加入一种
+* 39 [组合总和](https://leetcode.cn/problems/combination-sum/)
+* 46 [全排列](https://leetcode.cn/problems/permutations/)
+  * swap + 原数组操作 ， 复习
+* 78 [ 子集](https://leetcode.cn/problems/subsets/)
+* 79 [单词搜索](https://leetcode.cn/problems/word-search/)
+  * 递归+剪枝
+* 301 [ 删除无效的括号](https://leetcode.cn/problems/remove-invalid-parentheses/)
+  * 困难，待做
+* 494 [目标和](https://leetcode.cn/problems/target-sum/)
+  * 
 
 #  PS
 
@@ -393,17 +497,25 @@ categories:
 
 * **快慢指针定位链表中点时，前面添加dummy，这样定位就正好在中间了**
 
+#  性能
 
+* 注意可以传引用的尽量传引用，字符串传值和传引用性能差距10倍
+* unordered_map中不使用的元素实时移除，性能更高
 
 
 
 #  函数
 
-isalnum函数用于判断字符是否为字母（a-z和A-Z）或数字（0-9）
+* isalnum函数用于判断字符是否为字母（a-z和A-Z）或数字（0-9）
 
-reverse
+* reverse
+
+* 字符串转数字：stoi、atoi   负数也可以转换  前缀0会剔除
+* 数字转字符串：to_string
 
 #  常用
+
+##  STL
 
 stack、vector、list、queue常用方法
 
@@ -458,19 +570,320 @@ list
 * pop_back
 * erase
 
-输入输出
+## 输入输出
+
+#####  数据对
+
+* 没有对数，没有结束标志
+
+```c++
+输入包括两个正整数a,b(1 <= a, b <= 1000),输入数据包括多组。
+
+输入例子：
+1 5
+10 20
+输出例子：
+6
+30
+
+int main() {
+    int a, b;
+    while (cin >> a >> b) { // 注意 while 处理多个 case
+        cout << a + b << endl;
+    }
+}
+```
+
+* 有结束标志
+
+```c++
+输入包括两个正整数a,b(1 <= a, b <= 10^9),输入数据有多组, 如果输入为0 0则结束输入
+输入例子：
+1 5
+10 20
+0 0  
+输出例子：
+6
+30
+    
+int main() {
+    int a, b;
+    while (cin >> a >> b) { // 注意 while 处理多个 case
+        if(a == 0 && b == 0) break;
+        cout << a + b << endl;
+    }
+}
+```
+
+#####  多行数据
+
+* 有结束标志
+
+```c++
+输入数据包括多组。
+每组数据一行,每行的第一个整数为整数的个数n(1 <= n <= 100), n为0的时候结束输入。
+接下来n个正整数,即需要求和的每个正整数。
+
+输入例子：
+4 1 2 3 4
+5 1 2 3 4 5
+0
+输出例子：
+10
+15
+
+int main() {
+    while (true) {
+        int n;
+        cin >> n;
+        if (n == 0) {
+            break;
+        }
+        vector<int> nums(n);
+        int sum = 0;
+        for (int i = 0; i < n; i++) {
+            cin >> nums[i];
+            sum += nums[i];
+        }
+        cout << sum << endl;
+    }
+    return 0;
+}
+```
+* 有行数
+
+
+```c++
+输入的第一行包括一个正整数t(1 <= t <= 100), 表示数据组数。
+接下来t行, 每行一组数据。
+每行的第一个整数为整数的个数n(1 <= n <= 100)。
+接下来n个正整数, 即需要求和的每个正整数。
+
+输入例子：
+2
+4 1 2 3 4
+5 1 2 3 4 5
+输出例子：
+10
+15
+
+int main() {
+    int t;
+    cin >> t;
+    while (t--) {
+        int n;
+        cin >> n;
+        vector<int> nums(n);
+        int sum = 0;
+        for (int i = 0; i < n; i++) {
+            cin >> nums[i];
+            sum += nums[i];
+        }
+        cout << sum << endl;
+    }
+    return 0;
+}
+```
+
+* 没有行数，没有结束标志
+
+```c++
+输入数据有多组, 每行表示一组输入数据。
+每行的第一个整数为整数的个数n(1 <= n <= 100)。
+接下来n个正整数, 即需要求和的每个正整数。
+
+输入例子：
+4 1 2 3 4
+5 1 2 3 4 5
+输出例子：
+10
+15
+
+int main() {
+    string line;
+    while (getline(cin, line)) {
+        stringstream ss(line);
+        int n ;
+        ss >> n;
+        vector<int> vec(n);
+        int sum = 0;
+        for (int i = 0; i < n; ++i) {
+            ss >> vec[i];
+            sum += vec[i];
+        }
+        cout << sum << endl;
+    }
+    return 0;
+}
+
+```
+
+* 没有每行数据个数，没有行数，没有结束标志
+
+```c++
+输入数据有多组, 每行表示一组输入数据。
+
+每行不定有n个整数，空格隔开。(1 <= n <= 100)。
+    
+输入例子：
+1 2 3
+4 5
+0 0 0 0 0
+输出例子：
+6
+9
+0
+    
+int main() {
+    string line;
+    while (getline(cin, line)) {
+        istringstream iss(line);
+        int num;
+        int sum = 0;
+        vector<int> vec;
+        while (iss >> num) {
+            vec.push_back(num);
+            sum += num;
+        }
+        cout << sum << endl;
+        // for(int i = 0; i < vec.size(); ++i){
+        //     cout<<vec[i]<<" ";
+        // }
+        // cout<<endl;
+ 
+    }
+    return 0;
+}
+```
+
+#####  多个字符串
+
+* 给定个数
+
+```c++
+输入有两行，第一行n
+
+第二行是n个字符串，字符串之间用空格隔开
+
+输入例子：
+5
+c d a bb e
+输出例子：
+a bb c d e
+
+int main(){
+  int n;
+  cin>>n;
+  cin.ignore();
+  string line;
+  getline(cin,line);
+  stringstream ss(line);
+  vector<string> vec(n);
+  for(int i = 0; i < n; ++i){
+    ss>>vec[i];
+  }
+  sort(vec.begin(), vec.end());
+  for(int i = 0 ; i < n; ++i){
+    if(i != n-1)
+      cout << vec[i]<< " ";
+    else
+      cout<< vec[i]<<endl;
+  }
+   
+}
+```
+
+* 多行字符串
+
+```c++
+多个测试用例，每个测试用例一行。
+
+每行通过空格隔开，有n个字符，n＜100
+
+输入例子：
+a c bb
+f dddd
+nowcoder
+输出例子：
+a bb c
+dddd f
+nowcoder
+
+int main(){
+  string line;
+  while (getline(cin, line))
+  {
+    istringstream iss(line);
+    string s;
+    vector<string> vec;
+    while (iss>>s)
+    {
+      vec.push_back(s);
+    }
+    sort(vec.begin(), vec.end());
+    for(int i = 0; i<vec.size(); ++i){
+      if(i!=vec.size() -1)
+        cout<<vec[i]<<" ";
+      else
+        cout<<vec[i]<<endl;
+    }
+     
+  }
+  return 0;
+   
+}
+```
+
+* 多行字符串，每个字符串用逗号隔开
+
+```c++
+多个测试用例，每个测试用例一行。
+每行通过,隔开，有n个字符，n＜100
+
+输入例子：
+a,c,bb
+f,dddd
+nowcoder
+输出例子：
+a,bb,c
+dddd,f
+nowcoder
+
+
+int main() {
+    string line;
+    while (getline(cin, line)) {
+        istringstream iss(line);
+        string s;
+        vector<string> vec;
+        while (getline(iss, s, ',')) {
+            vec.push_back(s);
+        }
+        sort(vec.begin(), vec.end());
+        for (int i = 0 ; i < vec.size(); ++i) {
+            if (i != vec.size() - 1)
+                cout << vec[i] << ",";
+            else
+                cout << vec[i] << endl;
+        }
+ 
+    }
+    return 0;
+}
+```
+
+
 
 #  面试
 
 #####  约瑟夫环
 
+> [约瑟夫环](https://blog.csdn.net/melonyzzZ/article/details/127787472)
+
 * 阿里优酷一面算法
 
 * 输入n表示n个人, 从0到n-1编号，输入m, 从0编号开始报数，报数从1开始，报数到m则退出，再从1开始报数，最终留下的人获胜
 * 仍然输入m，输入任意n，输出获胜的编号，时间复杂度要O(n)
-
-```c++
-```
 
 #####  快速幂溢出问题
 
