--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -274,10 +274,8 @@ categories:
   * 双指针，注意需要有序
 * 007 [数组中和为 0 的三个数](https://leetcode.cn/problems/1fGaJU/)
   * 先排序，注意去重，内层用双指针
-
 * 008 [ 和大于等于 target 的最短子数组](https://leetcode.cn/problems/2VG8Kg/)
   * 注意先加nums[r],再判断
-
 * 009 [ 乘积小于 K 的子数组](https://leetcode.cn/problems/ZVAVXX/)
   * 每次记录以nums[r]结尾满足条件的个数
   * 易错复习
@@ -286,7 +284,6 @@ categories:
 * 011 [ 0 和 1 个数相同的子数组](https://leetcode.cn/problems/A1NYOS/)
   * 方法同010
   * 记录1-0的差值
-
 * 012 [左右两边子数组的和相等](https://leetcode.cn/problems/tvdfij/)
 * 013 [二维子矩阵的和](https://leetcode.cn/problems/O4NDxx/)
   * 二维前缀和
@@ -306,8 +303,18 @@ categories:
 * 019 [最多删除一个字符得到回文](https://leetcode.cn/problems/RQku0D/)
   * 递归
   * 官方贪心，但思路很简单，不过需要把思路理清除，复习
-
 * 020 [回文子字符串的个数](https://leetcode.cn/problems/a7VOhD/)
+* 021 [删除链表的倒数第 n 个结点](https://leetcode.cn/problems/SLwz0R/)
+  * 双指针
+
+* 022 [ 链表中环的入口节点](https://leetcode.cn/problems/c32eOV/)
+  * 2(a+b) = a + b + n(b + c)
+
+* 023 [两个链表的第一个重合节点](https://leetcode.cn/problems/3u1WK4/)
+
+* 024 [反转链表](https://leetcode.cn/problems/UHnkqh/)
+* 025 [链表中的两数相加](https://leetcode.cn/problems/lMSNwu/)
+  * 先反转再求和
 * 
 
 #  每日一题
@@ -468,7 +475,6 @@ categories:
 > 3 尽可能在原数组上标记，不用额外开空间，节省了空间，性能也更好
 
 * 17 [电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/)
-
 * 22 [ 括号生成](https://leetcode.cn/problems/generate-parentheses/)
   * 不熟练，复习，，，，
   * 每次有两个选择，要么加入'('、要么加入')', 所以需要回溯保证，每层只加入一种
@@ -481,7 +487,47 @@ categories:
 * 301 [ 删除无效的括号](https://leetcode.cn/problems/remove-invalid-parentheses/)
   * 困难，待做
 * 494 [目标和](https://leetcode.cn/problems/target-sum/)
-  * 
+
+##  差分数组
+
+> 注意对交点(增加和减少的汇聚点)的处理，根据业务情况确定在哪减
+
+* 1109 [航班预订统计](https://leetcode.cn/problems/corporate-flight-bookings/)
+  * 交点处增加，交点后减少
+* 1094 [拼车](https://leetcode.cn/problems/car-pooling/)
+  * 交点处同时增加和减少
+
+##  数学
+
+最大公因数： gcd(n,m)
+
+> [辗转相除法](ttps://blog.csdn.net/qq_36834256/article/details/79381912)
+
+```c++
+// 辗转相除法
+int gcd(int n, int m){
+    return n%m == 0 ? m : gcd(m, n%m);
+}
+```
+
+
+
+最小公倍数:    clm(n,m)
+
+```c++
+a = n/gcd(n,m);
+b = m/gcd(n,m);
+
+clm(n,m) = a * b * gcd(n,m) = n*m/gcd(n,m)
+    
+int clm(int n, int m){
+    return n*m/gcd(n,m);
+}
+```
+
+
+
+
 
 #  PS
 
@@ -501,6 +547,24 @@ categories:
 
 * 注意可以传引用的尽量传引用，字符串传值和传引用性能差距10倍
 * unordered_map中不使用的元素实时移除，性能更高
+* 多次索引查询，用临时变量存储， 性能快一倍
+
+```c++
+for(int i = 1; i <=n; ++i){
+    for(int j = target; j >= nums[i-1]; --j){
+        f[j] = f[j] || f[j-nums[i-1]];
+    }
+}
+
+for(int i = 1; i <=n; ++i){
+    int a = nums[i-1]; // 临时变量存储
+    for(int j = target; j >= a; --j){
+        f[j] = f[j] || f[j-a];
+    }
+}
+```
+
+
 
 
 
@@ -958,4 +1022,13 @@ long long ksc(long long a, long long b, long long p){
     
 }
 ```
+
+#####  最短路径
+
+* 宽度优先，深度优先可能爆空间
+* 华为4.19 第二题
+
+#####  差分数组
+
+* 华为4.19 第一题
 
