--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -124,6 +124,14 @@ categories:
   * 141升级，巧妙，记忆
 * 146 LRU 缓存
   * 直接用list，stl的list就是双向指针
+
+```c++
+mp.erase(ls.back().first); // 先mp移除，因为先ls，这里还要使用ls
+ls.pop_back();
+```
+
+
+
 * [148 排序链表](https://leetcode.cn/problems/sort-list/)
   * 归并排序，注意指针的移动，易错，复习
 * 152 [ 乘积最大子数组](https://leetcode.cn/problems/maximum-product-subarray/)
@@ -158,7 +166,7 @@ categories:
   * 递归，不熟悉，复习
 * 238 [除自身以外数组的乘积](https://leetcode.cn/problems/product-of-array-except-self/)
   * 左右乘积，不熟悉，复习
-*  239 [滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/)
+* 239 [滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/)
   * 最大堆， 用pair处理索引的问题
   * 单调队列，不熟悉，复习
   * 分块+预处理，待学习实践
@@ -306,15 +314,44 @@ categories:
 * 020 [回文子字符串的个数](https://leetcode.cn/problems/a7VOhD/)
 * 021 [删除链表的倒数第 n 个结点](https://leetcode.cn/problems/SLwz0R/)
   * 双指针
-
 * 022 [ 链表中环的入口节点](https://leetcode.cn/problems/c32eOV/)
   * 2(a+b) = a + b + n(b + c)
-
 * 023 [两个链表的第一个重合节点](https://leetcode.cn/problems/3u1WK4/)
-
 * 024 [反转链表](https://leetcode.cn/problems/UHnkqh/)
 * 025 [链表中的两数相加](https://leetcode.cn/problems/lMSNwu/)
   * 先反转再求和
+* 026 [ 重排链表](https://leetcode.cn/problems/LGjMqU/)
+  * 找中点+反转+归并
+  * 学习官方归并的方式：一次执行两步操作
+* 027 [回文链表](https://leetcode.cn/problems/aMhZSa/)
+  * 找中点+反转+比较
+* 028 [展平多级双向链表](https://leetcode.cn/problems/Qv1Da2/)
+  * 递归
+* 029 [排序的循环链表](https://leetcode.cn/problems/4ueAj6/)
+  * 易出错
+  * 先找到升序的起始位置，然后按常规操作找到合适的位置
+* 030 [插入、删除和随机访问都是 O(1) 的容器](https://leetcode.cn/problems/FortPu/)
+  * 哈希表支持插入，删除 O(1)
+  * 数组支持随机访问 O(1)
+* 050 [ 向下的路径节点之和](https://leetcode.cn/problems/6eUYwP/)
+  * 易错，复习
+
+* 053 [二叉搜索树中的中序后继](https://leetcode.cn/problems/P5rCT8/)
+  * 不熟练，复习
+
+* 056 [二叉搜索树中两个节点之和](https://leetcode.cn/problems/opLdQZ/)
+  * 代码简化
+
+* 057 [值和下标之差都在给定的范围内](https://leetcode.cn/problems/7WqeDu/)
+  * 不会，看解析，复习
+  * 滑动窗口+哈希表： 越界问题，绝对值问题，lower_bound
+  * 桶： 学习
+    * 注意编号时负数的处理
+
+* 058 [日程表](https://leetcode.cn/problems/fi9suh/)
+  * lower_bound, begin等迭代器使用，不熟悉，复习
+  * 线段树，学习
+
 * 
 
 #  每日一题
@@ -328,10 +365,37 @@ categories:
 * 1026 [节点与其祖先之间的最大差值](https://leetcode.cn/problems/maximum-difference-between-node-and-ancestor/)
   * 递归
   * 优化：只有记录前面的最大值和最小值，看解析证明
-
 * 1043 [分隔数组以得到最大和](https://leetcode.cn/problems/partition-array-for-maximum-sum/)
   * 动态规划
   * 问题的抽象不会，复习，，，
+* 1187 [使数组严格递增](https://leetcode.cn/problems/make-array-strictly-increasing/)
+  * 最多可以替换的次数为 min(*n*,*m*) ： 因为替换后是严格递增的，所以v2中的数只能使用一次，如果使用2次则v1中的就必定存在两个相同的数，则不严格递增了
+  * 不会，复习，锻炼思路
+* 2413 [最小偶倍数](https://leetcode.cn/problems/smallest-even-multiple/)
+  * 最小公倍数，最大公因数
+* 1105 [填充书架](https://leetcode.cn/problems/filling-bookcase-shelves/)
+  * 不会，复习，看解析：[更好理解](https://leetcode.cn/problems/filling-bookcase-shelves/solution/po-su-xiang-fa-dong-tai-gui-hua-by-zi-ji-5vr6/)
+* 2418 [按身高排序](https://leetcode.cn/problems/sort-the-people/)
+  * 利用堆索引的思想
+* 1163 [按字典序排在最后的子串](https://leetcode.cn/problems/last-substring-in-lexicographical-order/)
+  * 不懂，看答案，复习
+  * [易理解的解答](https://leetcode.cn/problems/last-substring-in-lexicographical-order/solution/python3javacgotypescript-yi-ti-yi-jie-sh-3amj/)
+* 1048 [最长字符串链](https://leetcode.cn/problems/longest-string-chain/)
+* 1015 [可被 K 整除的最小整数](https://leetcode.cn/problems/smallest-integer-divisible-by-k/)
+  * 数学: 取模，递推
+  * 优化：当 *k* 为 22 或者 55 的倍数时，能够被 *k* 整除的数字末尾一定不为 1，所以此时一定无解
+
+
+```c++
+        // resid = 1 mod k
+        // nnew = nold * 10 + 1
+        // residnew = nnew mod k = (nold * 10 + 1) mod k = ((nold%k) * 10 + 1)%k
+        //          = (residold * 10 + 1)%k
+        // resid = (resid * 10 + 1)%k
+        // resid == 0 表示可以被整除
+        // resid 重复出现则表示进入循环 ********重要：退出判断*******
+```
+
 
 
 #  题型
@@ -499,6 +563,12 @@ categories:
 
 ##  数学
 
+* 每日一题：1015
+* 29 [两数相除](https://leetcode.cn/problems/divide-two-integers/)
+  * 
+
+快速幂/快速乘： 下面的面试部分有讲解
+
 最大公因数： gcd(n,m)
 
 > [辗转相除法](ttps://blog.csdn.net/qq_36834256/article/details/79381912)
@@ -525,9 +595,22 @@ int clm(int n, int m){
 }
 ```
 
+##  字符串
 
+> 对字符串排序
+>
+> 两个字符串是否相等，直接用s == t判断， 比自己比较快
 
+* offer 专项 033 [ 变位词组](https://leetcode.cn/problems/sfvd7V/)
 
+* offer 专项 035 [ 最小时间差](https://leetcode.cn/problems/569nqc/)
+  * 时间格式转化： 各位操作比用substr+stoi的效率高
+
+##  线段树
+
+> [视频讲解](https://www.bilibili.com/video/BV1QT4y1Z7rR/?spm_id_from=333.337.search-card.all.click&vd_source=7230a052308bbb41976f248d2c778e3a)
+
+* offer 专项 058
 
 #  PS
 
@@ -547,7 +630,7 @@ int clm(int n, int m){
 
 * 注意可以传引用的尽量传引用，字符串传值和传引用性能差距10倍
 * unordered_map中不使用的元素实时移除，性能更高
-* 多次索引查询，用临时变量存储， 性能快一倍
+* 多级索引查询，用临时变量存储， 性能快一倍
 
 ```c++
 for(int i = 1; i <=n; ++i){
@@ -564,6 +647,49 @@ for(int i = 1; i <=n; ++i){
 }
 ```
 
+* 移除字符串中一个元素 code: 1048
+  * 用substr拼接比erase快一倍，内存消耗也更小，内存消耗大，可能是函数调用
+
+```c++
+// substr拼接
+for (int i = 0; i < word.size(); i++) {
+    string prev = word.substr(0, i) + word.substr(i + 1);
+}
+
+// erase
+string getEvery(string s, int index){
+    return s.erase(index, 1);
+}
+for (int i = 0; i < word.size(); i++) {
+    string prev = getEvery(word, i);
+}
+```
+
+* 存储26个字符
+  * 用vector存储比用unordered_map效率高，开销小
+
+```c++
+vector<int> mp(26);
+unordered_map<char, int> mp;
+```
+
+* 直接操作字符串各位效率更高
+
+```c++
+// s :  hh:mm  24小时时间格式，返回分钟数
+int toInt(string& s){
+    string sh = s.substr(0, 2);
+    string sm = s.substr(3, 2);
+    int h = stoi(sh);
+    int m = stoi(sm);
+    return h*60 + m;
+}
+// 下面写法效率更高
+int toInt(string& t){
+    return (int(t[0] - '0') * 10 + int(t[1] - '0')) * 60 + int(t[3] - '0') * 10 + int(t[4] - '0');
+}
+```
+
 
 
 
@@ -571,17 +697,49 @@ for(int i = 1; i <=n; ++i){
 #  函数
 
 * isalnum函数用于判断字符是否为字母（a-z和A-Z）或数字（0-9）
-
 * reverse
-
 * 字符串转数字：stoi、atoi   负数也可以转换  前缀0会剔除
 * 数字转字符串：to_string
+* unique + erase  数组去重： [c++ unique函数](https://blog.csdn.net/qq_40713201/article/details/126891262)
+* upper_bound(起始迭代器，结束迭代器，比较值a) ：返回严格大于a的元素的迭代器
+* lower_bound : 指向首个*不小于* `key` 的元素的迭代器。若找不到这种元素，则返回尾后迭代器
+* iota()  升序填充值
+
+```c++
+#include<vector>
+using namespace std;
+
+int main() {	
+	
+	vector<int>number(10);
+
+	iota(number.begin(), number.end(), 66);
+	for (int i = 0; i < 10; i++) {
+		cout << number[i] << " ";		//输出：66 67 68 69 70 71 72 73 74 75
+	}
+
+	system("pause");
+	return 0;
+}
+
+```
+
+* atoi()和stoi()
+* [accumulate](https://blog.csdn.net/VariatioZbw/article/details/125257536)
+  * 类似js中reduce
+
+* [memset](https://blog.csdn.net/weixin_44162361/article/details/115790452)
+  * `void *memset(void *s, int c, size_t n); `
+    * s指向要填充的内存块。
+    * c是要被设置的值。
+    * n是要被设置该值的字符数。
+    * 返回类型是一个指向存储区s的指针。
 
 #  常用
 
 ##  STL
 
-stack、vector、list、queue常用方法
+###  stack、vector、list、queue常用方法
 
 stack
 
@@ -633,6 +791,14 @@ list
 * push_back
 * pop_back
 * erase
+
+###  注意点
+
+容器为空的情况下可以调用 mp.count(key)
+
+容器为空的情况下查找返回的迭代器为 mp.end() ,   而容器为空的情况下mp.begin() == mp.end()
+
+
 
 ## 输入输出
 
@@ -936,6 +1102,20 @@ int main() {
 }
 ```
 
+##  保留小数点后n位
+
+> https://zhidao.baidu.com/question/1431242996370114299.html
+
+* setprecision(n) : 表示保留n位，整体保留的位数
+* fixed： 表示以小数点后开始记保留的位数
+
+```c++
+#include <iomanip>
+double cur = 4.6666667
+cout<<setprecision(4)<<cur<<endl; // 4.667
+cout<<fixed<<setprecision(4)<<cur<<endl; // 4.6667
+```
+
 
 
 #  面试
@@ -956,12 +1136,17 @@ int main() {
 > [快速幂溢出](https://blog.csdn.net/m0_62556295/article/details/127211930)
 >
 > 重要定理：(a*b)%p = (a%p) *( b%p)%p
+>
+> 重要定理：(a+b)%p = ((a%p) + ( b%p))%p
 
 ```
 a = mp + x
 b = np + y
 (a*b)%p = ((mp + x)*(np + y))%p = (mnp^2 + mpy + npx + xy)%p = xy%p
 (a%p) *( b%p)%p = x * y %p = xy%p
+
+(a+b)%p = ((mp + x)+(np + y))%p = (mp + np + x + y)%p = (x+y)%p
+((a%p) + ( b%p))%p = (x + y)%p
 ```
 
 ```c++
