--- a/source/_posts/C++/hot100.md
+++ b/source/_posts/C++/hot100.md
@@ -602,7 +602,6 @@ int clm(int n, int m){
 > 两个字符串是否相等，直接用s == t判断， 比自己比较快
 
 * offer 专项 033 [ 变位词组](https://leetcode.cn/problems/sfvd7V/)
-
 * offer 专项 035 [ 最小时间差](https://leetcode.cn/problems/569nqc/)
   * 时间格式转化： 各位操作比用substr+stoi的效率高
 
@@ -611,6 +610,8 @@ int clm(int n, int m){
 > [视频讲解](https://www.bilibili.com/video/BV1QT4y1Z7rR/?spm_id_from=333.337.search-card.all.click&vd_source=7230a052308bbb41976f248d2c778e3a)
 
 * offer 专项 058
+
+
 
 #  PS
 
@@ -724,16 +725,99 @@ int main() {
 
 ```
 
-* atoi()和stoi()
 * [accumulate](https://blog.csdn.net/VariatioZbw/article/details/125257536)
   * 类似js中reduce
-
 * [memset](https://blog.csdn.net/weixin_44162361/article/details/115790452)
   * `void *memset(void *s, int c, size_t n); `
     * s指向要填充的内存块。
     * c是要被设置的值。
     * n是要被设置该值的字符数。
     * 返回类型是一个指向存储区s的指针。
+* reverse  
+* 复杂度:恰好交换 `(last - first)/2` 次
+
+```c++
+int a[] = {4, 5, 6, 7};
+std::reverse(std::begin(a), std::end(a));
+```
+
+* find
+
+```c++
+    std::vector<int> v{0, 1, 2, 3, 4};
+ 
+    auto result1 = std::find(std::begin(v), std::end(v), n1);
+```
+
+* sort
+
+```c++
+#include <algorithm>
+std::sort(s.begin(), s.end(), std::greater<int>());// 按降序，  默认是升序
+
+// 自定义比较函数
+bool compare(vector<int>& a, vector<int>& b){
+  if(a[0] != b[0]){
+    return a[0] < b[0]; // 起始点小的在前
+  }else{
+    return a[1] < b[1]; // 起始点相同的情况下，终止点小的在前
+  }
+}
+vector<vector<int>>& intervals;// 存储的是顶点对  [[1,2],[2,3],[3,4],[1,3]]
+sort(intervals.begin(), intervals.end(), compare);
+
+// lambda写法
+sort(intervals.begin(), intervals.end(), [](vector<int>& a, vector<int>& b){
+  if(a[0] != b[0]){
+    return a[0] < b[0]; // 起始点小的在前
+  }else{
+    return a[1] < b[1]; // 起始点相同的情况下，终止点小的在前
+  }
+});
+```
+
+* C++中的__builtin_popcount()
+
+> https://blog.csdn.net/weixin_44915226/article/details/105367005
+
+```c++
+该函数是C++自带的库函数，内部实现是用查表实现的。
+作用：统计数字在二进制下“1”的个数。
+int a = 2   
+int num = __builtin_popcount(a)  // num = 1   2的二进制是10
+```
+
+* tie()
+  * 解包，类似js中的解构
+
+> https://blog.csdn.net/lllzzzhhh2589/article/details/121584299
+
+```c++
+struct S {
+    int n;
+    std::string s;
+    float d;
+    bool operator<(const S& rhs) const {
+        // 比较 n 与 rhs.n,
+        // 而后为 s 与 rhs.s,
+        // 而后为 d 与 rhs.d
+        return std::tie(n, s, d) < std::tie(rhs.n, rhs.s, rhs.d);
+    }
+};
+
+S value{42, "Test", 3.14};
+
+int i;
+double d;
+string s;
+
+tie(i, d, s) = t3;
+
+cout << i << " " << d << " " << s << endl;
+//打印： 42 3.14 Test
+```
+
+
 
 #  常用
 
@@ -1102,7 +1186,220 @@ int main() {
 }
 ```
 
-##  保留小数点后n位
+##  字符串
+
+> [ASCII码一览表](http://c.biancheng.net/c/ascii/)
+
+```c++
+INT_MAX = 2^31-1;
+INT_MIN = -2^31
+```
+
+**字符串转int**
+
+atoi()和stoi()
+
+>[atoi()和stoi()的区别](https://www.jianshu.com/p/e700ac920249)
+
+* atoi()和stoi()函数都是只转换字符串的数字部分，如果遇到其它字符的话则停止转换
+* 只返回有效数字 0123返回123
+
+```c++
+#include <cstdio>
+#include <iostream>
+#include <string>
+using namespace std;
+int main(){
+    char str[] = {'1','2','a','3'};
+    string str1 = "12aa3";
+    //遇到了'a'字符，停止数字转换
+    cout << atoi(str) << endl;   // 打印 12
+    //遇到了'a'字符，停止数字转换
+    cout << stoi(str1) << endl;  // 打印 12
+    
+  string s = "0123";
+  int n = stoi(s);
+  cout<<s<<endl; // 0123
+  cout<<n<<endl; // 123
+    
+  string s = "0";
+  int n = stoi(s);
+  cout<<s<<endl;//0
+  cout<<n<<endl;//0
+}
+
+
+class Solution {
+public:
+  vector<string> res;
+  bool isTrue(string s){
+    if(s.length() > 1 && s[0] == '0') return false;//
+    int it = stoi(s);
+    if(it >=0 && it <= 255){
+      return true;
+    }
+    return false;
+  }
+  void dfs(string& s, int index, int need, vector<string>&  pre){
+    if(need == 0){ // 最后一层长度一定满足条件
+      string last = s.substr(index);
+      if(!isTrue(last)) return;
+      string temp = "";
+      for(auto& s : pre){
+        temp = temp + s + ".";
+      }
+      temp += last;
+      res.push_back(temp);
+      return;
+    }
+    for(int i = index; i<index+3 && i <s.length(); ++i){
+      int len = s.length() - i-1;
+      // cout<<"len: "<<len<<endl;
+      // cout<<"need: "<<need<<"   need*3: "<<need*3<<endl;
+      if(len>= need && len <= need*3){
+        string cur = s.substr(index, i-index+1);
+        if(!isTrue(cur)) return;
+        pre.push_back(cur);
+        dfs(s, i+1, need-1, pre);
+        pre.pop_back();
+      }
+    }
+  }
+  vector<string> restoreIpAddresses(string s) {
+    int len = s.length();
+    if(len < 4 || len > 12) return {};
+    vector<string> pre;
+    dfs(s, 0, 3, pre);
+    return res;
+  }
+};
+
+```
+
+**string转char**
+
+c_str()
+
+>[C++中的 c_str() 函数](https://blog.csdn.net/YXXXYX/article/details/119957061)
+
+```c++
+#include<iostream>
+#include<cstring>
+using namespace std;
+
+int main() {
+	const char *ptr;
+	string s = "12345";
+    ptr = s.c_str();
+    cout << "s改变前ptr为：" << ptr << endl;
+    s = "66666";
+    cout << "s改变后ptr为：" << ptr << endl;
+    return 0;
+}
+```
+
+**int转string**
+
+to_string()
+
+**大小写字符转换**
+
+[tolower/toupper](https://blog.csdn.net/laozhuxinlu/article/details/51539737?spm=1001.2101.3001.6661.1&utm_medium=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-51539737-blog-105710187.pc_relevant_3mothn_strategy_recovery&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-51539737-blog-105710187.pc_relevant_3mothn_strategy_recovery&utm_relevant_index=1) 
+
+```c++
+#include<ctype.h>   // c++中使用不用引入头文件
+```
+
+**判断字符数字**
+
+* isalnum函数用于判断字符是否为字母（a-z和A-Z）或数字（0-9）
+
+isalnum
+
+```c++
+#include<ctype.h> // c++中使用不用引入头文件
+```
+
+**string移除最后一个元素**
+
+```c++
+string s = "string!";
+s.pop_back(); // c++11 新语法
+```
+
+**string追加char**
+
+```c++
+string s = "abc";
+char c = 'd';
+// 方式1
+s += c;
+cout<<s<<endl;
+// 方式2
+s.push_back(c);
+```
+
+##  位运算
+
+> https://blog.csdn.net/m0_64183293/article/details/122519405
+>
+> GCC自带的一些builtin内建函数 ：https://blog.csdn.net/tjcwt2011/article/details/118154919
+
+* C++中的__builtin_popcount()
+
+> https://blog.csdn.net/weixin_44915226/article/details/105367005
+
+```c++
+该函数是C++自带的库函数，内部实现是用查表实现的。
+作用：统计数字在二进制下“1”的个数。
+```
+
+* __builtin_ctz
+  * 这个函数作用是返回输入数二进制表示从最低位开始(右起)的连续的0的个数；如果传入0则行为未定义
+
+##  数值
+
+```c++
+1e9+7 // 10^9+7  一个比较大的质数
+```
+
+**取绝对值**
+
+abs()
+
+**使用最大最小值**
+
+```c++
+<limits.h>
+LONG_MIN
+L
+```
+
+**二进制1个数**
+
+> [三种求二进制1个数的办法](https://leetcode.cn/problems/hamming-distance/)
+
+```
+1 __builtin_popcount
+2 x >> 1  x & 1   右移，末尾和1与
+3 x = x & (x-1)
+```
+
+**位与位异或位或**
+
+> https://blog.csdn.net/m0_37782602/article/details/122863949
+
+```
+位与 &  0&0=0; 0&1=0; 1&0=0; 1&1=1;
+位异或 ^ 0^0=0； 0^1=1； 1^0=1； 1^1=0；
+位或 |  0|0=0； 0|1=1； 1|0=1； 1|1=1；
+```
+
+```c++
+Brian Kernighan 算法的原理是：对于任意整数x, 令 x = x & (x-1) 该运算将 x 的二进制表示的最后一个 1 变成 0
+```
+
+**保留小数点后n位**
 
 > https://zhidao.baidu.com/question/1431242996370114299.html
 
